# pgbouncer-x2

./: .gitmodules  CMakeLists.txt  README.rst  configure.ac
etc/: pgbouncer.ini
include/: bouncer.h  objects.h
src/: loader.c  objects.c
